[TSDB] Add support for downsampling `aggregate_metric_double` fields  (#90029)
his PR adds support for downsampling metric fields of type aggregate_metric_double, enabling the rollup-of-rollups functionality.