@@ -7,15 +7,12 @@
 
 package org.elasticsearch.xpack.downsample;
 
-import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.common.compress.CompressedXContent;
 import org.elasticsearch.index.mapper.MappedFieldType;
 import org.elasticsearch.index.mapper.MapperService;
 import org.elasticsearch.index.mapper.TimeSeriesParams;
-import org.elasticsearch.indices.IndicesService;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.index.mapper.TimeSeriesParams.TIME_SERIES_DIMENSION_PARAM;
@@ -43,7 +40,7 @@ class TimeseriesFieldTypeHelper {
     public boolean isTimeSeriesMetric(final String unused, final Map<String, ?> fieldMapping) {
         final String metricType = (String) fieldMapping.get(TIME_SERIES_METRIC_PARAM);
         return metricType != null
-            && Arrays.asList(TimeSeriesParams.MetricType.values()).contains(TimeSeriesParams.MetricType.valueOf(metricType));
+            && List.of(TimeSeriesParams.MetricType.values()).contains(TimeSeriesParams.MetricType.valueOf(metricType));
     }
 
     public boolean isTimeSeriesDimension(final String unused, final Map<String, ?> fieldMapping) {
@@ -51,20 +48,13 @@ class TimeseriesFieldTypeHelper {
     }
 
     static class Builder {
-        private final IndicesService indicesService;
-        private final Map<String, Object> indexMapping;
-        private final IndexMetadata indexMetadata;
+        private final MapperService mapperService;
 
-        Builder(final IndicesService indicesService, final Map<String, Object> indexMapping, final IndexMetadata indexMetadata) {
-            this.indicesService = indicesService;
-            this.indexMapping = indexMapping;
-            this.indexMetadata = indexMetadata;
+        Builder(final MapperService mapperService) {
+            this.mapperService = mapperService;
         }
 
         public TimeseriesFieldTypeHelper build(final String timestampField) throws IOException {
-            final MapperService mapperService = indicesService.createIndexMapperServiceForValidation(indexMetadata);
-            final CompressedXContent sourceIndexCompressedXContent = new CompressedXContent(indexMapping);
-            mapperService.merge(MapperService.SINGLE_MAPPING_NAME, sourceIndexCompressedXContent, MapperService.MergeReason.INDEX_TEMPLATE);
             return new TimeseriesFieldTypeHelper(mapperService, timestampField);
         }
     }
